--- a/css/easy-responsive-tabs.css
+++ b/css/easy-responsive-tabs.css
@@ -1,8 +1,7 @@
-
 body {
   margin: 0px;
   padding: 0px;
-  background: #f5f5f5;
+  background: var(--white);
   font-weight: 500;
 }
 
@@ -11,32 +10,34 @@ p {
   margin: 0px;
   padding: 0px;
 }
+
 ul.resp-tabs-list {
-    width: 100px;
-    float: left;
-    margin-top: 10px;
+  width: 100px;
+  float: left;
+  margin-top: 10px;
 }
+
 .resp-tabs-list li {
-    display: block;
-    padding: 27px 0px;
-    margin: 0;
-    border-bottom: 1px solid #fbfbfb;
-    list-style: none;
-    cursor: pointer;
-    float: none;
-    color: rgb(0, 0, 0);
-    width: 86px;
-    background: #00e2d6;
-    font-size: 25px;
-    text-align: center;
+  display: block;
+  padding: 27px 0px;
+  margin: 0;
+  border-bottom: 1px solid var(--white);
+  list-style: none;
+  cursor: pointer;
+  float: none;
+  color: var(--black);
+  width: 86px;
+  background: var(--light-blue);
+  font-size: 25px;
+  text-align: center;
 }
 
 .resp-tabs-container {
-    padding: 0px!important;
-    background-color: #fff;
-    /* clear: left; */
-    width: 88%;
-    float: right;
+  padding: 0px !important;
+  background-color: var(--white);
+  /* clear: left; */
+  width: 88%;
+  float: right;
 }
 
 h2.resp-accordion {
@@ -50,32 +51,33 @@ h2.resp-accordion {
 }
 
 .resp-tab-active {
-    /* border: 1px solid #c1c1c1; */
-    /* border-right: 4px solid #bc0023; */
-    /* margin-bottom: -1px !important; */
-    /* padding: 12px 14px 14px 14px !important; */
-    position: relative;
+  /* border: 1px solid var(--gray); */
+  /* border-right: 4px solid #bc0023; */
+  /* margin-bottom: -1px !important; */
+  /* padding: 12px 14px 14px 14px !important; */
+  position: relative;
 }
+
 .resp-tab-active:before {
-    content: '';
-    position: absolute;
-    width: 0;
-    height: 0;
-    transform: rotate(-90deg);
-	-webkit-transform: rotate(-90deg);
-	-o-transform: rotate(-90deg);
-	-moz-transform: rotate(-90deg);
-	-ms-transform: rotate(-90deg);
-    border-top: 10px solid #00e2d6;
-    border-left: 10px solid rgba(69, 42, 21, 0);
-    border-right: 10px solid rgba(199, 57, 57, 0);
-    left: 94%;
-    top: 44%;
-    transition: 0.5s all;
-    -webkit-transition: 0.5s all;
-    -o-transition: 0.5s all;
-    -moz-transition: 0.5s all;
-    -ms-transition: 0.5s all;
+  content: '';
+  position: absolute;
+  width: 0;
+  height: 0;
+  transform: rotate(-90deg);
+  -webkit-transform: rotate(-90deg);
+  -o-transform: rotate(-90deg);
+  -moz-transform: rotate(-90deg);
+  -ms-transform: rotate(-90deg);
+  border-top: 10px solid var(--light-blue);
+  border-left: 10px solid rgba(69, 42, 21, 0);
+  border-right: 10px solid rgba(199, 57, 57, 0);
+  left: 94%;
+  top: 44%;
+  transition: 0.5s all;
+  -webkit-transition: 0.5s all;
+  -o-transition: 0.5s all;
+  -moz-transition: 0.5s all;
+  -ms-transition: 0.5s all;
 }
 
 .resp-tab-active {
@@ -84,30 +86,32 @@ h2.resp-accordion {
 }
 
 .resp-content-active,
-.resp-accordion-active { display: block; }
+.resp-accordion-active {
+  display: block;
+}
 
 .resp-tab-content {
-    /* border: 1px solid #1ca0de; */
-    border-top: transparent;
-    /*min-height: 405px;*/
+  /* border: 1px solid #1ca0de; */
+  border-top: transparent;
+  /*min-height: 405px;*/
 }
 
 h2.resp-accordion {
   font-size: 13px;
-  border: 1px solid #c1c1c1;
-  border-top: 0px solid #c1c1c1;
+  border: 1px solid var(--gray);
+  border-top: 0px solid var(--gray);
   margin: 0px;
   padding: 10px 15px;
 }
 
 h2.resp-tab-active {
-  border-bottom: 0px solid #fff !important;
+  border-bottom: 0px solid var(--white) !important;
   margin-bottom: 0px !important;
   padding: 10px 15px !important;
 }
 
 h2.resp-tab-title:last-child {
-  border-bottom: 12px solid #c1c1c1 !important;
+  border-bottom: 12px solid var(--gray) !important;
   background: blue;
 }
 
@@ -128,8 +132,8 @@ h2.resp-tab-title:last-child {
 
 .resp-vtabs .resp-tabs-container {
   padding: 0px;
-  background-color: #fff;
-  border: 1px solid #c1c1c1;
+  background-color: var(--white);
+  border: 1px solid var(--gray);
   float: left;
   width: 68%;
   min-height: 250px;
@@ -137,12 +141,14 @@ h2.resp-tab-title:last-child {
   clear: none;
 }
 
-.resp-vtabs .resp-tab-content { border: none; }
+.resp-vtabs .resp-tab-content {
+  border: none;
+}
 
 .resp-vtabs li.resp-tab-active {
-  border: 1px solid #c1c1c1;
+  border: 1px solid var(--gray);
   border-right: none;
-  background-color: #fff;
+  background-color: var(--white);
   position: relative;
   z-index: 1;
   margin-right: -1px !important;
@@ -156,77 +162,102 @@ h2.resp-tab-title:last-child {
   margin-top: 3px;
   border-left: 6px solid transparent;
   border-right: 6px solid transparent;
-  border-top: 12px solid #1c2020;
+  border-top: 12px solid var(--black);
 }
 
 h2.resp-tab-active span.resp-arrow {
   border: none;
   border-left: 6px solid transparent;
   border-right: 6px solid transparent;
-  border-bottom:12px solid #fa5d07;
+  border-bottom: 12px solid var(--orange);
 }
 
 /*-----------Accordion styles-----------*/
 
 h2.resp-tab-active {
-    background: #000000!important;
-    color: #fff!important;
+  background: var(--black) !important;
+  color: var(--white) !important;
 }
 
-.resp-easy-accordion h2.resp-accordion { display: block; }
+.resp-easy-accordion h2.resp-accordion {
+  display: block;
+}
 
-.resp-easy-accordion .resp-tab-content { border: 1px solid #c1c1c1; }
+.resp-easy-accordion .resp-tab-content {
+  border: 1px solid var(--gray);
+}
 
-.resp-easy-accordion .resp-tab-content:last-child { border-bottom: 1px solid #c1c1c1 !important; }
+.resp-easy-accordion .resp-tab-content:last-child {
+  border-bottom: 1px solid var(--gray) !important;
+}
 
 .resp-jfit {
   width: 100%;
   margin: 0px;
 }
 
-.resp-tab-content-active { display: block; }
+.resp-tab-content-active {
+  display: block;
+}
 
-h2.resp-accordion:first-child { border-top: 1px solid #c1c1c1 !important; }
+h2.resp-accordion:first-child {
+  border-top: 1px solid var(--gray) !important;
+}
+
 /*Here your can change the breakpoint to set the accordion, when screen resolution changed*/
-@media only screen and (max-width: 768px) {
+@media(max-width: 768px) {
 
-ul.resp-tabs-list { display: none; }
+  ul.resp-tabs-list {
+    display: none;
+  }
 
-h2.resp-accordion { display: block; }
+  h2.resp-accordion {
+    display: block;
+  }
 
-.resp-vtabs .resp-tab-content { border: 1px solid #C1C1C1; }
+  .resp-vtabs .resp-tab-content {
+    border: 1px solid var(--gray);
+  }
 
-.resp-vtabs .resp-tabs-container {
-  border: none;
-  float: none;
-  width: 100%;
-  min-height: initial;
-  clear: none;
+  /*.resp-vtabs*/ .resp-tabs-container {
+    border: none;
+    float: none;
+    width: 100%;
+    min-height: initial;
+    clear: none;
+  }
+
+  .resp-accordion-closed {
+    display: none !important;
+  }
+
+  .resp-vtabs .resp-tab-content:last-child {
+    border-bottom: 1px solid var(--gray) !important;
+  }
 }
 
-.resp-accordion-closed { display: none !important; }
+@media(max-width: 568px) {
+  .resp-arrow {
+    margin-top: 8px;
+    border-top: 9px solid var(--black);
+  }
 
-.resp-vtabs .resp-tab-content:last-child { border-bottom: 1px solid #c1c1c1 !important; }
+  h2.resp-tab-active span.resp-arrow {
+    border-bottom: 9px solid var(--orange);
+  }
 }
-@media only screen and (max-width: 568px) {
-	.resp-arrow {
-		margin-top: 8px;
-		border-top: 9px solid #1c2020;
-	}
-	h2.resp-tab-active span.resp-arrow {
-		border-bottom: 9px solid #fa5d07;
-	}
-}
-@media only screen and (max-width: 384px) {
-	.resp-arrow {
-		margin-top: 7px;
-		border-top: 8px solid #1c2020;
-		border-left: 5px solid transparent;
-		border-right: 5px solid transparent;
-	}
-	h2.resp-tab-active span.resp-arrow {
-		border-bottom: 8px solid #fa5d07;
-		border-left: 5px solid transparent;
-		border-right: 5px solid transparent;
-	}
+
+@media(max-width: 384px) {
+  .resp-arrow {
+    margin-top: 7px;
+    border-top: 8px solid var(--black);
+    border-left: 5px solid transparent;
+    border-right: 5px solid transparent;
+  }
+
+  h2.resp-tab-active span.resp-arrow {
+    border-bottom: 8px solid var(--orange);
+    border-left: 5px solid transparent;
+    border-right: 5px solid transparent;
+  }
 }
