--- a/css/popuo-box.css
+++ b/css/popuo-box.css
@@ -20,7 +20,7 @@
 #small-dialog-ch,
 #small-dialog-pi,
 #small-dialog-am {
-  background: white;
+  background: var(--white);
   padding: 0px;
   text-align: left;
   max-width: 450px;
@@ -126,7 +126,7 @@ a.play-icon.popup-with-zoom-anim img:hover {
   z-index: 1042;
   overflow: hidden;
   position: fixed;
-  background: #0b0b0b;
+  background: var(--black);
   opacity: 0.8;
   filter: alpha(opacity=80);
 }
@@ -227,7 +227,7 @@ a.play-icon.popup-with-zoom-anim img:hover {
 }
 
 .mfp-preloader {
-  color: #cccccc;
+  color: var(--gray);
   position: absolute;
   top: 50%;
   width: auto;
@@ -239,7 +239,7 @@ a.play-icon.popup-with-zoom-anim img:hover {
 }
 
 .mfp-preloader a {
-  color: #cccccc;
+  color: var(--gray);
 }
 
 .mfp-preloader a:hover {
@@ -259,7 +259,7 @@ button.mfp-arrow {
   overflow: visible;
   cursor: pointer;
   border: 0;
-  background: #FFF;
+  background: var(--white);
   -webkit-appearance: none;
   display: block;
   padding: 0;
@@ -281,7 +281,7 @@ button::-moz-focus-inner {
   text-decoration: none;
   text-align: center;
   padding: 0 0 18px 10px;
-  color: white !important;
+  color: var(--white) !important;
   font-style: normal;
   font-size: 45px;
   outline: none;
@@ -300,7 +300,7 @@ button::-moz-focus-inner {
 
 .mfp-image-holder .mfp-close,
 .mfp-iframe-holder .mfp-close {
-  color: white;
+  color: var(--white);
   right: -6px;
   text-align: right;
   padding-right: 6px;
