--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,18 @@ Author URL: http://w3layouts.com
 License: Creative Commons Attribution 3.0 Unported
 License URL: http://creativecommons.org/licenses/by/3.0/
 --*/
+:root {
+	--black: #171717;
+	--gray: #c1c1c1;
+  --white: #fefefe;
+  --blue: #3867d6;
+  --light-blue: #45aaf2;
+  /* --light-blue: #4ECDC4; */
+  /* --acqua-green: #00f3eb; */
+  --yellow: #fed330;
+  --orange: #fa8231;
+}
+
 html {
 	scroll-behavior: smooth;
 }
@@ -13,7 +25,7 @@ body {
 	margin: 0;
 	font-size: 100%;
 	font-family: 'Open Sans', sans-serif;
-	background: #fff;
+	background: var(--white);
 }
 
 body a {
@@ -122,14 +134,14 @@ label {
 	position: relative;
 	font-weight: 600;
 	text-transform: capitalize;
-	color: #fff;
+	color: var(--white);
 	letter-spacing: 1.5px;
 }
 
 .navbar-default .navbar-nav>li>a:hover,
 .navbar-default .navbar-nav>li>a:focus,
 .navbar-default .navbar-nav li a.active {
-	color: #fa5d07;
+	color: var(--orange);
 }
 
 .navbar-right {
@@ -156,7 +168,7 @@ label {
 
 /*-- //nav-effect --*/
 .navbar-default .navbar-brand {
-	color: #fff;
+	color: var(--white);
 	font-size: 40px;
 	text-transform: capitalize;
 	letter-spacing: 0.5px;
@@ -164,7 +176,7 @@ label {
 
 .navbar-default .navbar-brand:hover,
 .navbar-default .navbar-brand:focus {
-	color: #fff;
+	color: var(--white);
 	background-color: transparent;
 }
 
@@ -177,7 +189,7 @@ label {
 
 .agile_short_dropdown {
 	border-radius: 0;
-	background: #ffffff;
+	background: var(--white);
 	text-align: center;
 	padding: 0;
 	border: none;
@@ -194,15 +206,15 @@ label {
 }
 
 .agile_short_dropdown>li>a:hover {
-	color: #fff;
+	color: var(--white);
 	text-decoration: none;
-	background-color: #00e2d6;
+	background-color: var(--light-blue);
 }
 
 .navbar-default .navbar-nav>.open>a,
 .navbar-default .navbar-nav>.open>a:hover,
 .navbar-default .navbar-nav>.open>a:focus {
-	color: #fa5d07;
+	color: var(--orange);
 	background-color: transparent;
 }
 
@@ -253,7 +265,7 @@ label {
 
 .rslides_tabs .rslides_here a {
 	background: rgba(255, 255, 255, .1);
-	color: #fff;
+	color: var(--white);
 	font-weight: bold;
 }
 
@@ -297,7 +309,7 @@ label {
 	z-index: 2;
 	font-size: 20px;
 	text-shadow: none;
-	color: #fff;
+	color: var(--white);
 	left: 0;
 	right: 0;
 	padding: 10px 20px;
@@ -342,7 +354,7 @@ label {
 #slider5-pager span {
 	width: 100px;
 	height: 15px;
-	background: #fff;
+	background: var(--white);
 	display: inline-block;
 	/*-- w3layouts --*/
 	border-radius: 30em;
@@ -352,7 +364,7 @@ label {
 #slider3-pager .rslides_here a,
 #slider4-pager .rslides_here a,
 #slider5-pager .rslides_here a {
-	background: #FFF;
+	background: var(--white);
 	border-radius: 30em;
 	opacity: 1;
 }
@@ -476,7 +488,7 @@ ul.social-slide li i.mac {
 	width: 16px;
 	height: 16px;
 	display: inline-block;
-	background: #fff;
+	background: var(--white);
 	border-radius: 50%;
 	border: 4px solid #002663;
 }
@@ -535,25 +547,25 @@ a.callbacks_nav.callbacks3_nav.next {
 }
 
 .banner-text h3 {
-	color: #fff;
+	color: var(--white);
 	font-size: 72px;
 	text-transform: capitalize;
 	font-weight: 700;
 	letter-spacing: 1px;
 	width: 100%;
 	margin: 15px 0;
-	text-shadow: 1px 1px 4px #000;
+	text-shadow: 1px 1px 4px var(--black);
 }
 
 .banner-text h6 {
 	font-size: 17px;
 	letter-spacing: 6px;
 	text-transform: capitalize;
-	color: #ffffff;
+	color: var(--white);
 }
 
 .banner-text p {
-	color: #00f3eb;
+	color: var(--light-blue);
 	line-height: 28px;
 	letter-spacing: 2px;
 	font-size: 16px;
@@ -563,7 +575,7 @@ a.callbacks_nav.callbacks3_nav.next {
 
 .more-button a {
 	display: inline-block;
-	color: #fff;
+	color: var(--white);
 	text-decoration: none;
 	outline: none;
 	margin-top: 3em;
@@ -576,7 +588,7 @@ a.callbacks_nav.callbacks3_nav.next {
 
 span.video-w3ls {
 	font-size: 2.5em;
-	color: #00e2d6;
+	color: var(--light-blue);
 	text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.72);
 	float: left;
 	margin: 0px 8px 0 0;
@@ -587,8 +599,8 @@ span.video-text {
 	font-size: 16px;
 	letter-spacing: 1px;
 	font-weight: 400;
-	color: #fff;
-	text-shadow: 3px 3px 2px #000;
+	color: var(--white);
+	text-shadow: 3px 3px 2px var(--black);
 	line-height: 19px;
 }
 
@@ -657,7 +669,7 @@ h3.heading-agileinfo {
 	font-size: 35px;
 	margin-bottom: 1.5em;
 	text-align: center;
-	color: #000;
+	color: var(--black);
 	text-transform: capitalize;
 	position: relative;
 }
@@ -666,7 +678,7 @@ h2.heading-agileinfo i,
 h3.heading-agileinfo i {
 	display: block;
 	font-size: 16px;
-	color: #fa5d07;
+	color: var(--orange);
 	text-shadow: 1px 1px 1px #585757;
 }
 
@@ -676,7 +688,7 @@ h3.heading-agileinfo:before {
 	content: " ";
 	width: 108px;
 	height: 2px;
-	background: #00e2d6;
+	background: var(--light-blue);
 	display: block;
 	bottom: 3px;
 	left: 39%;
@@ -688,21 +700,21 @@ h3.heading-agileinfo:after {
 	content: " ";
 	width: 108px;
 	height: 2px;
-	background: #00e2d6;
+	background: var(--light-blue);
 	display: block;
 	bottom: 3px;
 	right: 39%;
 }
 
 .white-w3ls {
-	color: #fff !important;
+	color: var(--white) !important;
 }
 
 /*-- //main --*/
 /*-- banner-bottom --*/
 .banner-bottom {
 	padding: 3em 3em 2em;
-	background: #171717;
+	background: var(--black);
 }
 
 .bnr-btm-grids-agileits {
@@ -712,12 +724,12 @@ h3.heading-agileinfo:after {
 }
 
 .bnr-btm-icon i {
-	color: #ffffff;
+	color: var(--white);
 	font-size: 30px;
 }
 
 .bnr-btm-info h3 {
-	color: #fff;
+	color: var(--white);
 	font-size: 18px;
 	letter-spacing: .5px;
 	font-weight: 400;
@@ -794,7 +806,7 @@ ul.social-agileinfo li a {
 
 .bar-grids h6 {
 	font-size: 0.9em;
-	color: #000;
+	color: var(--black);
 	margin-bottom: 0.6em;
 	font-family: 'Roboto Condensed', sans-serif;
 	text-transform: capitalize;
@@ -822,7 +834,7 @@ ul.social-agileinfo li a {
 
 h3.title-w3-agile-sub {
 	font-size: 2em;
-	color: #fff;
+	color: var(--white);
 	letter-spacing: 1px;
 	text-transform: capitalize;
 	font-weight: 700;
@@ -837,12 +849,12 @@ p.para-agileits-w3layouts {
 	text-align: justify;
 	font-size: 15px;
 	letter-spacing: 0.5px;
-	color: #000;
+	color: var(--black);
 	line-height: 30px;
 }
 
 .about-w3-grids h4 {
-	color: #000;
+	color: var(--black);
 	text-transform: capitalize;
 	letter-spacing: 1px;
 	font-size: 21px;
@@ -851,7 +863,7 @@ p.para-agileits-w3layouts {
 
 .about-w3-grids {
 	padding: 4.5em 2em 2em;
-	background: #fff;
+	background: var(--white);
 	width: 32%;
 	text-align: center;
 	position: relative;
@@ -866,7 +878,7 @@ p.para-agileits-w3layouts {
 	position: absolute;
 	width: 70px;
 	height: 70px;
-	background: #fa5d07;
+	background: var(--orange);
 	left: 41%;
 	top: -11%;
 	box-shadow: 1px 1px 13px #00163c;
@@ -874,7 +886,7 @@ p.para-agileits-w3layouts {
 }
 
 .trust-icon-w3ls i {
-	color: #fff;
+	color: var(--white);
 	font-size: 1.7em;
 	transform: rotate(-45deg);
 	-webkit-transform: rotate(-45deg);
@@ -889,12 +901,12 @@ a.read-agileits {
 	text-decoration: none;
 	padding: 10px 35px;
 	margin-top: 1em;
-	color: #fff;
-	background: #00e2d6;
+	color: var(--white);
+	background: var(--light-blue);
 }
 
 a.read-agileits:hover {
-	background: #fa5d07;
+	background: var(--orange);
 }
 
 /*-- //Reasons to trust us --*/
@@ -910,7 +922,7 @@ a.read-agileits:hover {
 }
 
 .banner-bottom-2 p {
-	color: #fff;
+	color: var(--white);
 	font-size: 17px;
 	letter-spacing: 1px;
 	width: 50%;
@@ -926,8 +938,8 @@ a.read-agileits:hover {
 }
 
 .test-right-w3layouts h4 {
-	color: #00f3eb;
-	text-shadow: 2px 2px 5px #000000;
+	color: var(--light-blue);
+	text-shadow: 2px 2px 5px var(--black);
 	letter-spacing: 1px;
 	font-size: 19px;
 	font-weight: 500;
@@ -939,7 +951,7 @@ a.read-agileits:hover {
 	display: block;
 	font-size: 13px !important;
 	font-weight: 100 !important;
-	color: #fff;
+	color: var(--white);
 	padding: .5em 0 0 7em !important;
 }
 
@@ -953,7 +965,7 @@ a.read-agileits:hover {
 	font-size: 40px;
 	font-weight: 500;
 	margin: 0px 0 25px;
-	color: #00e2d6;
+	color: var(--light-blue);
 	font-family: 'Montserrat', sans-serif;
 	position: relative;
 }
@@ -963,7 +975,7 @@ a.read-agileits:hover {
 	content: " ";
 	width: 55px;
 	height: 2px;
-	background: #fa5d07;
+	background: var(--orange);
 	display: block;
 	bottom: -8px;
 	left: 39%;
@@ -972,7 +984,7 @@ a.read-agileits:hover {
 .stats-grid h4 {
 	font-size: 17px;
 	font-weight: 400;
-	color: #000000;
+	color: var(--black);
 	letter-spacing: 0.5px;
 }
 
@@ -994,7 +1006,7 @@ h2.inner-title-w3 {
 	font-family: 'Open Sans', sans-serif;
 	text-align: center;
 	margin-top: 2.5em;
-	color: #fff;
+	color: var(--white);
 	font-weight: 600;
 	font-size: 30px;
 	letter-spacing: 1px;
@@ -1011,7 +1023,7 @@ ul.w3_short li {
 }
 
 ul.w3_short li a {
-	color: #fa5d07;
+	color: var(--orange);
 	text-decoration: none;
 }
 
@@ -1062,7 +1074,7 @@ ul.w3_short {
 }
 
 .service-grids:hover i {
-	color: #000;
+	color: var(--black);
 	border-color: rgba(0, 226, 214, 0.46);
 	transition: all 0.7s ease-in-out;
 	-webkit-transition: all 0.7s ease-in-out;
@@ -1072,8 +1084,8 @@ ul.w3_short {
 }
 
 .service-grids:hover h4 {
-	border-color: #000000;
-	color: #fa5d07;
+	border-color: var(--black);
+	color: var(--orange);
 	transition: all 0.7s ease-in-out;
 	-webkit-transition: all 0.7s ease-in-out;
 	-moz-transition: all 0.7s ease-in-out;
@@ -1082,10 +1094,10 @@ ul.w3_short {
 }
 
 .service-grids h4 {
-	color: #000;
+	color: var(--black);
 	font-size: 18px;
 	padding: 0px 30px 5px;
-	border-bottom: 2px solid #fff;
+	border-bottom: 2px solid var(--white);
 	margin: 1.5em 0 0.8em;
 	display: inline-block;
 }
@@ -1190,7 +1202,7 @@ ul.w3_short {
 }
 
 .w3ls-effect .w3layouts-caption h4 {
-	color: #fa5d07;
+	color: var(--orange);
 	font-size: 1.3em;
 	letter-spacing: .5px;
 }
@@ -1199,7 +1211,7 @@ ul.w3_short {
 	margin-top: 0.3em;
 	font-size: 13px;
 	letter-spacing: 1px;
-	color: #fff;
+	color: var(--white);
 }
 
 .w3ls-effect .wthree-icon {
@@ -1224,7 +1236,7 @@ ul.w3_short {
 }
 
 .social-icon .social-agileinfo li a {
-	color: #fff !important;
+	color: var(--white) !important;
 }
 
 /*-- //team --*/
@@ -1456,19 +1468,19 @@ ul.portfolio_agile_info_w3ls li {
 .agileits_w3layouts_events_text.port_info_agile {
 	text-align: center;
 	padding: 1em 0;
-	background: #00e2d6;
-	color: #fff;
-	border-bottom: 2px solid #000000;
+	background: var(--light-blue);
+	color: var(--white);
+	border-bottom: 2px solid var(--black);
 }
 
 .agileits_w3layouts_events_text.port_info_agile h3 {
-	color: #fff;
+	color: var(--white);
 	letter-spacing: 1px;
 }
 
 .mask i {
 	font-size: 2.5em;
-	color: #fff;
+	color: var(--white);
 	line-height: 6em;
 }
 
@@ -1499,7 +1511,7 @@ ul.portfolio_agile_info_w3ls li {
 .contact input[type="email"]:focus,
 .contact textarea:hover,
 .contact textarea:focus {
-	border-color: #00e2d6;
+	border-color: var(--light-blue);
 }
 
 .contact textarea {
@@ -1517,12 +1529,12 @@ ul.portfolio_agile_info_w3ls li {
 
 .contact input[type="submit"] {
 	outline: none;
-	color: #fff;
+	color: var(--white);
 	padding: 0.8em 4em;
 	font-size: 1em;
 	margin: 1em 0 0 0;
 	-webkit-appearance: none;
-	background: #00e2d6;
+	background: var(--light-blue);
 	border: none;
 	-webkit-transition: 0.5s all;
 	transition: 0.5s all;
@@ -1531,7 +1543,7 @@ ul.portfolio_agile_info_w3ls li {
 }
 
 .contact input[type="submit"]:hover {
-	background: #fa5d07;
+	background: var(--orange);
 }
 
 ::-webkit-input-placeholder {
@@ -1566,7 +1578,7 @@ ul.portfolio_agile_info_w3ls li {
 }
 
 ul.bs-glyphicons-list li:hover {
-	background: #000;
+	background: var(--black);
 	transition: 0.5s all;
 	-webkit-transition: 0.5s all;
 	-o-transition: 0.5s all;
@@ -1575,7 +1587,7 @@ ul.bs-glyphicons-list li:hover {
 }
 
 ul.bs-glyphicons-list li:hover span {
-	color: #fff;
+	color: var(--white);
 }
 
 .codes a {
@@ -1590,7 +1602,7 @@ ul.bs-glyphicons-list li:hover span {
 	padding: 8px 15px;
 	background: rgba(149, 149, 149, 0.18);
 	margin: 1em 0 1em 0;
-	border: 5px solid #ffffff;
+	border: 5px solid var(--white);
 	text-align: left;
 	-moz-box-sizing: border-box;
 	-webkit-box-sizing: border-box;
@@ -1605,7 +1617,7 @@ ul.bs-glyphicons-list li:hover span {
 }
 
 .icon-box:hover {
-	background: #000;
+	background: var(--black);
 	transition: 0.5s all;
 	-webkit-transition: 0.5s all;
 	-o-transition: 0.5s all;
@@ -1614,11 +1626,11 @@ ul.bs-glyphicons-list li:hover span {
 }
 
 .icon-box:hover i.fa {
-	color: #fff !important;
+	color: var(--white) !important;
 }
 
 .icon-box:hover a.agile-icon {
-	color: #fff !important;
+	color: var(--white) !important;
 }
 
 .codes .bs-glyphicons li {
@@ -1667,7 +1679,7 @@ h3.icon-subheading {
 h3.agileits-icons-title {
 	text-align: center;
 	font-size: 35px;
-	color: #000;
+	color: var(--black);
 	font-weight: 300;
 }
 
@@ -1840,7 +1852,7 @@ li.list-group-item1 {
 }
 
 .show-grid [class^=col-] {
-	background: #fff;
+	background: var(--white);
 	text-align: center;
 	margin-bottom: 10px;
 	line-height: 2em;
@@ -1857,7 +1869,7 @@ li.list-group-item1 {
 
 .xs h3,
 h3.m_1 {
-	color: #000;
+	color: var(--black);
 	font-size: 1.7em;
 	font-weight: 300;
 	margin-bottom: 1em;
@@ -1956,7 +1968,7 @@ section#tables p {
 	border-radius: 0 2px 2px 2px;
 	border: 1px solid #e0e0e0;
 	padding: 16px;
-	background-color: #ffffff;
+	background-color: var(--white);
 }
 
 .table td,
@@ -2220,7 +2232,7 @@ h2.typoh2 {
 /*-- //typography --*/
 /*--footer--*/
 .footer {
-	background: #000;
+	background: var(--black);
 	padding-bottom: 1em !important;
 }
 
@@ -2237,17 +2249,17 @@ ul.agile_footer_grid_list li:nth-child(2) {
 }
 
 ul.agile_footer_grid_list li a {
-	color: #00e2d6;
+	color: var(--light-blue);
 	text-decoration: none;
 }
 
 ul.agile_footer_grid_list li a:hover {
-	color: #fff;
+	color: var(--white);
 }
 
 ul.agile_footer_grid_list li span {
 	display: block;
-	color: #fff;
+	color: var(--white);
 	margin: .5em 0 0;
 }
 
@@ -2259,7 +2271,7 @@ ul.agile_footer_grid_list li i {
 .w3_agile_footer_grid h3,
 .services-right-agileits h4 {
 	font-size: 21px;
-	color: #000;
+	color: var(--black);
 	padding-bottom: .7em;
 	position: relative;
 	margin-bottom: 1em;
@@ -2269,7 +2281,7 @@ ul.agile_footer_grid_list li i {
 .w3_agile_footer_grid h3:after,
 .services-right-agileits h4:after {
 	content: '';
-	background: #00e2d6;
+	background: var(--light-blue);
 	width: 20%;
 	height: 2px;
 	position: absolute;
@@ -2290,7 +2302,7 @@ ul.agile_footer_grid_list li i {
 }
 
 .agileits_w3layouts_footer_grid_list li a {
-	color: #fff;
+	color: var(--white);
 	text-decoration: none;
 	font-weight: 600;
 	letter-spacing: 1px;
@@ -2298,7 +2310,7 @@ ul.agile_footer_grid_list li i {
 }
 
 .agileits_w3layouts_footer_grid_list li a:hover {
-	color: #00e2d6;
+	color: var(--light-blue);
 }
 
 .agileits_w3layouts_footer_grid_list li:last-child {
@@ -2322,12 +2334,12 @@ ul.agile_footer_grid_list li i {
 	text-align: center;
 	background: transparent;
 	box-shadow: 2px 2px 1px #3a3737;
-	border: 2px solid #000;
+	border: 2px solid var(--black);
 	margin: 0 auto 1em;
 }
 
 .wthree_footer_grid_left i {
-	color: #fff;
+	color: var(--white);
 	font-size: 1em;
 	line-height: 3.3em;
 }
@@ -2352,7 +2364,7 @@ ul.agile_footer_grid_list li i {
 }
 
 .w3ls_footer_grid_left p a:hover {
-	color: #fff;
+	color: var(--white);
 }
 
 .w3ls_footer_grid_left {
@@ -2360,7 +2372,7 @@ ul.agile_footer_grid_list li i {
 }
 
 /*.w3ls_footer_grid_left:hover .wthree_footer_grid_left {
-	background: #fa5d07;
+	background: var(--orange);
 	box-shadow: 2px 2px 1px #3a3737;
 	transition: 0.5s all;
 	-webkit-transition: 0.5s all;
@@ -2388,7 +2400,7 @@ ul.agile_footer_grid_list li i {
 }
 
 /*.agileinfo_copyright p a:hover {
-	color: #fff;
+	color: var(--white);
 }*/
 
 /*--//footer--*/
@@ -2911,8 +2923,8 @@ ul.agile_footer_grid_list li i {
 	}
 
 	.banner-text p {
-		font-size: 13px;
-		line-height: 16px;
+		font-size: 12px;
+		line-height: 14px;
 		letter-spacing: 1.5px;
 	}
 
@@ -2974,7 +2986,7 @@ ul.agile_footer_grid_list li i {
 		border-bottom: 1px solid #fbfbfb;
 		text-align: center;
 		font-size: 20px;
-		background: #00e2d6;
+		background: var(--light-blue);
 	}
 
 	h2.resp-accordion:first-child {
@@ -3033,12 +3045,12 @@ ul.agile_footer_grid_list li i {
 	.navbar-default .navbar-collapse,
 	.navbar-default .navbar-form {
 		border: none;
-		background: #000;
+		background: var(--black);
 	}
 
 	.navbar-default .navbar-toggle {
-		border-color: #00e2d6;
-		background: #00e2d6;
+		border-color: var(--light-blue);
+		background: var(--light-blue);
 		margin: 0;
 		margin: 0px 0px 0px 0;
 		transition: 0.5s all;
@@ -3049,7 +3061,7 @@ ul.agile_footer_grid_list li i {
 	}
 
 	.navbar-default .navbar-toggle .icon-bar {
-		background-color: #FFF;
+		background-color: var(--white);
 	}
 
 	.navbar-default .navbar-toggle:hover,
@@ -3063,7 +3075,7 @@ ul.agile_footer_grid_list li i {
 
 	.navbar-default .navbar-nav>li>a {
 		padding: 1em 0em;
-		color: #fff;
+		color: var(--white);
 		font-size: 0.8em;
 	}
 
@@ -3077,7 +3089,7 @@ ul.agile_footer_grid_list li i {
 	}
 
 	.navbar-default .navbar-nav .open .dropdown-menu>li>a {
-		color: #fff;
+		color: var(--white);
 		font-size: 0.8em;
 		border: none;
 		text-align: center;
@@ -3087,7 +3099,7 @@ ul.agile_footer_grid_list li i {
 
 	.navbar-default .navbar-nav .open .dropdown-menu>li>a:hover,
 	.navbar-default .navbar-nav .open .dropdown-menu>li>a:focus {
-		color: #fa5d07;
+		color: var(--orange);
 		background-color: transparent;
 	}
 
@@ -3662,14 +3674,14 @@ ul.agile_footer_grid_list li i {
 	}
 
 	.banner-text h3 {
-		font-size: 21px;
-		line-height: 24px;
-		margin: 10px 0 3px;
+		/* font-size: 21px; */
+		/* line-height: 24px; */
+		margin: 10px 0 5px;
 	}
 
-	.banner-text p {
+	/* .banner-text p {
 		line-height: 21px;
-	}
+	} */
 
 	.more-button a {
 		margin-top: 1em;
