--- a/css/easy-responsive-tabs.css
+++ b/css/easy-responsive-tabs.css
@@ -35,15 +35,8 @@ ul.resp-tabs-list {
 .resp-tabs-container {
   padding: 0px !important;
   background-color: var(--white);
-  /* clear: left; */
   width: 88%;
   float: right;
-}
-
-h2.resp-accordion {
-  cursor: pointer;
-  padding: 5px;
-  display: none;
 }
 
 .resp-tab-content {
@@ -51,10 +44,6 @@ h2.resp-accordion {
 }
 
 .resp-tab-active {
-  /* border: 1px solid var(--gray); */
-  /* border-right: 4px solid #bc0023; */
-  /* margin-bottom: -1px !important; */
-  /* padding: 12px 14px 14px 14px !important; */
   position: relative;
 }
 
@@ -81,7 +70,6 @@ h2.resp-accordion {
 }
 
 .resp-tab-active {
-  /*border-bottom: none;*/
   background-color: rgba(28, 160, 222, 0.13);
 }
 
@@ -91,18 +79,23 @@ h2.resp-accordion {
 }
 
 .resp-tab-content {
-  /* border: 1px solid #1ca0de; */
   border-top: transparent;
-  /*min-height: 405px;*/
 }
 
 h2.resp-accordion {
-  font-size: 13px;
-  border: 1px solid var(--gray);
-  border-top: 0px solid var(--gray);
+  display: none;
   margin: 0px;
   padding: 10px 15px;
+  border: 1px solid var(--gray);
+  border-top: 0px solid var(--gray);
+  font-size: 13px;
+  cursor: pointer;
 }
+
+  h2.resp-accordion:has(svg) {
+    padding-top: 5px;
+    padding-bottom: 5px;
+  }
 
 h2.resp-tab-active {
   border-bottom: 0px solid var(--white) !important;
@@ -204,7 +197,13 @@ h2.resp-accordion:first-child {
   border-top: 1px solid var(--gray) !important;
 }
 
-/*Here your can change the breakpoint to set the accordion, when screen resolution changed*/
+
+@media(max-width: 991px) {
+  .resp-tabs-container {
+    width: 82%;
+  }
+}
+
 @media(max-width: 768px) {
 
   ul.resp-tabs-list {
@@ -219,7 +218,7 @@ h2.resp-accordion:first-child {
     border: 1px solid var(--gray);
   }
 
-  /*.resp-vtabs*/ .resp-tabs-container {
+  .resp-tabs-container {
     border: none;
     float: none;
     width: 100%;
