--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	--black: #171717;
 	--gray: #c1c1c1;
   --white: #fefefe;
-  --blue: #3867d6;
+  --blue: #4272e1;
   --light-blue: #45aaf2;
   /* --light-blue: #4ECDC4; */
   /* --acqua-green: #00f3eb; */
