--- a/css/popuo-box.css
+++ b/css/popuo-box.css
@@ -1,29 +1,9 @@
 /* Styles for dialog window */
-#small-dialog,
-#small-dialog1 {
+#small-dialog {
   background: rgba(255, 255, 255, 0.08);
   padding: 1.5em;
   text-align: left;
   max-width: 700px;
-  margin: 40px auto;
-  position: relative;
-  text-align: center;
-}
-
-#small-dialog-it,
-#small-dialog-in,
-#small-dialog-fr,
-#small-dialog-sh,
-#small-dialog-sf,
-#small-dialog-su,
-#small-dialog-me,
-#small-dialog-ch,
-#small-dialog-pi,
-#small-dialog-am {
-  background: var(--white);
-  padding: 0px;
-  text-align: left;
-  max-width: 450px;
   margin: 40px auto;
   position: relative;
   text-align: center;
