--- a/css/easy-responsive-tabs.css
+++ b/css/easy-responsive-tabs.css
@@ -1,18 +1,17 @@
-ul.resp-tabs-list,
-p {
-  margin: 0px;
-  padding: 0px;
+ul.resp-tabs-list p {
+  margin: 0;
+  padding: 0
 }
 
 ul.resp-tabs-list {
   width: 100px;
   float: left;
-  margin-top: 2em;
+  margin-top: 2em
 }
 
 .resp-tabs-list li {
   display: block;
-  padding: 27px 0px;
+  padding: 27px 0;
   margin: 0;
   border-bottom: 1px solid var(--white);
   list-style: none;
@@ -22,22 +21,22 @@ ul.resp-tabs-list {
   width: 86px;
   background: var(--light-blue);
   font-size: 25px;
-  text-align: center;
+  text-align: center
 }
 
 .resp-tabs-container {
-  padding: 0px !important;
+  padding: 0 !important;
   background-color: var(--white);
   width: 88%;
-  float: right;
+  float: right
 }
 
 .resp-tab-content {
-  display: none;
+  display: none
 }
 
 .resp-tab-active {
-  position: relative;
+  position: relative
 }
 
 .resp-tab-active:before {
@@ -55,90 +54,50 @@ ul.resp-tabs-list {
   border-right: 10px solid rgba(199, 57, 57, 0);
   left: 94%;
   top: 44%;
-  transition: 0.5s all;
-  -webkit-transition: 0.5s all;
-  -o-transition: 0.5s all;
-  -moz-transition: 0.5s all;
-  -ms-transition: 0.5s all;
+  transition: .5s all;
+  -webkit-transition: .5s all;
+  -o-transition: .5s all;
+  -moz-transition: .5s all;
+  -ms-transition: .5s all
 }
 
 .resp-tab-active {
-  background-color: rgba(28, 160, 222, 0.13);
+  background-color: rgba(28, 160, 222, .13)
 }
 
-.resp-content-active,
-.resp-accordion-active {
-  display: block;
+.resp-accordion-active,
+.resp-content-active {
+  display: block
 }
 
 .resp-tab-content {
-  border-top: transparent;
+  border-top: transparent
 }
 
 h2.resp-accordion {
   display: none;
-  margin: 0px;
+  margin: 0;
   padding: 10px 15px;
   border: 1px solid var(--gray);
-  border-top: 0px solid var(--gray);
+  border-top: 0 solid var(--gray);
   font-size: 13px;
-  cursor: pointer;
+  cursor: pointer
 }
 
-  h2.resp-accordion:has(svg) {
-    padding-top: 5px;
-    padding-bottom: 5px;
-  }
+h2.resp-accordion:has(svg) {
+  padding-top: 5px;
+  padding-bottom: 5px
+}
 
 h2.resp-tab-active {
-  border-bottom: 0px solid var(--white) !important;
-  margin-bottom: 0px !important;
-  padding: 10px 15px !important;
+  border-bottom: 0 solid var(--white) !important;
+  margin-bottom: 0 !important;
+  padding: 10px 15px !important
 }
 
 h2.resp-tab-title:last-child {
   border-bottom: 12px solid var(--gray) !important;
-  background: blue;
-}
-
-/*-----------Vertical tabs-----------*/
-
-.resp-vtabs ul.resp-tabs-list {
-  float: left;
-  width: 30%;
-}
-
-.resp-vtabs .resp-tabs-list li {
-  display: block;
-  padding: 15px 15px !important;
-  margin: 0;
-  cursor: pointer;
-  float: none;
-}
-
-.resp-vtabs .resp-tabs-container {
-  padding: 0px;
-  background-color: var(--white);
-  border: 1px solid var(--gray);
-  float: left;
-  width: 68%;
-  min-height: 250px;
-  border-radius: 4px;
-  clear: none;
-}
-
-.resp-vtabs .resp-tab-content {
-  border: none;
-}
-
-.resp-vtabs li.resp-tab-active {
-  border: 1px solid var(--gray);
-  border-right: none;
-  background-color: var(--white);
-  position: relative;
-  z-index: 1;
-  margin-right: -1px !important;
-  padding: 14px 15px 15px 14px !important;
+  background: #00f
 }
 
 .resp-arrow {
@@ -148,67 +107,54 @@ h2.resp-tab-title:last-child {
   margin-top: 3px;
   border-left: 6px solid transparent;
   border-right: 6px solid transparent;
-  border-top: 12px solid var(--black);
+  border-top: 12px solid var(--black)
 }
 
 h2.resp-tab-active span.resp-arrow {
   border: none;
   border-left: 6px solid transparent;
   border-right: 6px solid transparent;
-  border-bottom: 12px solid var(--orange);
+  border-bottom: 12px solid var(--orange)
 }
-
-/*-----------Accordion styles-----------*/
 
 h2.resp-tab-active {
   background: var(--black) !important;
-  color: var(--white) !important;
+  color: var(--white) !important
 }
 
 .resp-easy-accordion h2.resp-accordion {
-  display: block;
+  display: block
 }
 
 .resp-easy-accordion .resp-tab-content {
-  border: 1px solid var(--gray);
+  border: 1px solid var(--gray)
 }
 
 .resp-easy-accordion .resp-tab-content:last-child {
-  border-bottom: 1px solid var(--gray) !important;
-}
-
-.resp-jfit {
-  width: 100%;
-  margin: 0px;
+  border-bottom: 1px solid var(--gray) !important
 }
 
 .resp-tab-content-active {
-  display: block;
+  display: block
 }
 
 h2.resp-accordion:first-child {
-  border-top: 1px solid var(--gray) !important;
+  border-top: 1px solid var(--gray) !important
 }
 
-
-@media(max-width: 991px) {
+@media (max-width:991px) {
   .resp-tabs-container {
-    width: 82%;
+    width: 82%
   }
 }
 
-@media(max-width: 768px) {
-
+@media (max-width:768px) {
   ul.resp-tabs-list {
-    display: none;
+    display: none
   }
 
   h2.resp-accordion {
-    display: block;
-  }
-
-  .resp-vtabs .resp-tab-content {
-    border: 1px solid var(--gray);
+    display: block
   }
 
   .resp-tabs-container {
@@ -216,40 +162,32 @@ h2.resp-accordion:first-child {
     float: none;
     width: 100%;
     min-height: initial;
-    clear: none;
-  }
-
-  .resp-accordion-closed {
-    display: none !important;
-  }
-
-  .resp-vtabs .resp-tab-content:last-child {
-    border-bottom: 1px solid var(--gray) !important;
+    clear: none
   }
 }
 
-@media(max-width: 568px) {
+@media (max-width:568px) {
   .resp-arrow {
     margin-top: 8px;
-    border-top: 9px solid var(--black);
+    border-top: 9px solid var(--black)
   }
 
   h2.resp-tab-active span.resp-arrow {
-    border-bottom: 9px solid var(--orange);
+    border-bottom: 9px solid var(--orange)
   }
 }
 
-@media(max-width: 384px) {
+@media (max-width:384px) {
   .resp-arrow {
     margin-top: 7px;
     border-top: 8px solid var(--black);
     border-left: 5px solid transparent;
-    border-right: 5px solid transparent;
+    border-right: 5px solid transparent
   }
 
   h2.resp-tab-active span.resp-arrow {
     border-bottom: 8px solid var(--orange);
     border-left: 5px solid transparent;
-    border-right: 5px solid transparent;
+    border-right: 5px solid transparent
   }
 }
